Bug #11291 : Text not wrapping around image in the Content Block with Large Image.

--- a/sites/all/modules/features/pp_demo_beans/css/pp_demo_beans_shared.css
+++ b/sites/all/modules/features/pp_demo_beans/css/pp_demo_beans_shared.css
@@ -44,8 +44,11 @@ max-width: 100%;
 height: auto;    
      }
   .box-about figure.large-image {
-    width: 100%;
+    max-width: 70%;
     margin-bottom: 10px; 
+    margin-left: 10px; 
+    width: auto;
+    float: right;
     border: 0 none}
   .box-about figure.positition-right {
     float: right;
