--- a/sites/all/themes/slac/css/styles.css
+++ b/sites/all/themes/slac/css/styles.css
@@ -2512,7 +2512,7 @@ ol.search-results .search-snippet {
     margin-right: 0; } }
 @media (min-width: 894px) {
   .right-sidebar {
-    width: 73.93526%;
+    width: 65.24702%;
     float: right;
     margin-right: 0; } }
 @media (min-width: 1200px) {
